--- a/components/invitation/style.scss
+++ b/components/invitation/style.scss
@@ -1,4 +1,6 @@
 .invitation-wrapper {
+  position: relative;
+  
   > .container {
     background-color: #ebbbae;    
   }
